--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -16,10 +16,19 @@
   #{/list}
 
   <form class="ui stacked segment form" action="/dashboard/addstation" method="POST">
-    <div class="field">
+   <div class="three fields">
+     <div class="field">
       <label>Name</label>
       <input placeholder="Name" type="text" name="name">
     </div>
+    <div class="field">
+     <label>Latitude</label>
+     <input placeholder="Latitude" type="text" name="latitude">
+   </div>
+   <div class="field">
+     <label>Longitude</label>
+     <input placeholder="Longitude" type="text" name="longitude">
+   </div>
     <button class="ui blue submit button">Add Station</button>
   </form>
 
