--- a/app/views/stationdashboard.html
+++ b/app/views/stationdashboard.html
@@ -12,25 +12,34 @@
   <div class="ui equal width padded grid">
     <div class="black column">
       <h1 class="ui grey inverted small header">${station.name}</h1>
+      <i class="cloud sun icon"></i>
     </div>
     <div class="black column">
       <h1 class="ui grey inverted small header"> Weather</h1>
+      <i class="map marker icon"></i>
       <p class="ui grey inverted tiny header">${reading.codeToWeather(reading.code)}</p>
     </div>
     <div class="black column">
       <h1 class="ui grey inverted small header">Temp</h1>
+      <i class="temperature low icon"></i>
       <p class="ui grey inverted tiny header">${reading.temperature} C</p>
       <p class="ui grey inverted tiny header">${reading.ceToFa(reading.temperature)} F</p>
     </div>
     <div class="black column">
       <h1 class="ui grey inverted small header">Wind</h1>
+      <i class="wind icon"></i>
       <p class="ui grey inverted tiny header">${reading.windInBf(reading.windSpeed)} bft</p>
       <p class="ui grey inverted tiny header">${reading.windDirectionString(reading.windSpeed)} bft</p>
       <p class="ui grey inverted tiny header">${reading.windChill(reading.temperature, reading.windSpeed)} bft</p>
+      <p class="ui grey inverted tiny header">Max: ${station.getMaxWindSpeed(station.readings)}</p>
+      <p class="ui grey inverted tiny header">Min: ${station.getMinWindSpeed(station.readings)}</p>
     </div>
     <div class="black column">
       <h1 class="ui grey inverted small header">Pressure</h1>
+      <i class="globe icon"></i>
       <p class="ui grey inverted tiny header">${reading.pressure} hpa</p>
+      <p class="ui grey inverted tiny header">Max: ${station.getMaxPressure(station.readings)}</p>
+      <p class="ui grey inverted tiny header">Min: ${station.getMinPressure(station.readings)}</p>
     </div>
   </div>
   #{/if}
@@ -61,23 +70,23 @@
     <div class="five fields">
       <div class="field">
         <label>Code</label>
-        <input placeholder="Code" type="number" name="code">
+        <input placeholder="Code" type="text" name="code">
       </div>
       <div class="field">
         <label>Temperature</label>
-        <input placeholder="00.0 C" type="number" name="temperature">
+        <input placeholder="00.0 C" type="text" name="temperature">
       </div>
       <div class="field">
         <label>Wind Speed</label>
-        <input placeholder="00.00 Km/h" type="number" name="windSpeed">
+        <input placeholder="00.00 Km/h" type="text" name="windSpeed">
       </div>
       <div class="field">
         <label>Pressure</label>
-        <input placeholder="000hPa" type="number" name="pressure">
+        <input placeholder="000hPa" type="text" name="pressure">
       </div>
       <div class="field">
         <label>Wind Direction</label>
-        <input placeholder="000deg" type="number" name="windDirection">
+        <input placeholder="000deg" type="text" name="windDirection">
       </div>
     </div>
     <button class="ui blue submit button">Add Reading</button>
