--- a/app/views/tags/menu.html
+++ b/app/views/tags/menu.html
@@ -4,6 +4,7 @@
     <a id="dashboard" class="item" href="/dashboard"> Dashboard  </a>
     <a id="about" class="item" href="/about"> About </a>
     <a id="logout" class="item" href="/logout"> Logout </a>
+    <a id="account" class="item" href="/account"> <i class="user icon"></i></a>
   </div>
 </nav>
 
