WeatherTop 3.6 Images added in singup and login, cannot create a new station without naming it, Dashboard fixed

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -16,6 +16,6 @@
         </form>
     </div>
     <div class="column">
-        <img class="ui image" src="/public/images/todo-2.jpg">
+        <img class="ui image" src="/public/images/weather-2.jpg">
     </div>
 </div>
