--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -4,6 +4,9 @@
 
 <div class="ui two column grid basic middle aligned segment">
     <div class="column">
+        <img class="ui image" src="/public/images/weather-1.png">
+    </div>
+    <div class="column">
         <form class="ui stacked segment form" action="/register" method="POST">
             <h3 class="ui header">Register</h3>
             <div class="two fields">
@@ -27,7 +30,5 @@
             <button class="ui blue submit button">Submit</button>
         </form>
     </div>
-    <div class="column">
-        <img class="ui image" src="/public/images/todo-1.png">
-    </div>
+
 </div>
