Weathertop 3.6.2 new Start view for app

--- a/app/views/start.html
+++ b/app/views/start.html
@@ -1,13 +1,16 @@
 #{extends 'main.html' /}
-#{set title:'About' /}
+#{set title:'Start' /}
 
-#{menu id:"start"/}
+#{welcomemenu id:"start"/}
 
 <section class="ui center aligned middle aligned segment">
-  <h1 class="ui header">
-    Welcome to Template 1
-  </h1>
-  <p>
-    To be replaced with content...
-  </p>
+    <h1 class="ui  header">
+        Welcome to Weather Top App
+    </h1>
+    <h3 class="ui  header">
+        Log in if you already have an account
+    </h3>
+    <h3 class="ui  header">
+        Sign in to start using our App!
+    </h3>
 </section>
