WeatherTop 3.6.3 adjustment in names

--- a/app/views/tags/lastestconditions.html
+++ b/app/views/tags/lastestconditions.html
@@ -91,9 +91,9 @@
                                         ${reading.windDirectionString(reading.windSpeed)}
                                         bft
                                     </div>
-                                    <div class="item">${reading.windChill(reading.temperature,
+                                    <div class="item">feels like ${reading.windChill(reading.temperature,
                                         reading.windSpeed)}
-                                        bft
+
                                     </div>
                                     <div class="item">Max:
                                         ${_station.getMaxWindSpeed(_station.readings)}
